--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@ img {
 <img src="images/bird1.png"  id="bird1" />
 <img src="images/bird2.png"  id="bird2" />
 <img src="images/bird3.png"  id="bird3" />
+<img src="images/sun1.png"  id="sun1" />
 <img src="images/bg.png"  id="bg" />
 
-<<script src="js/Pipe.js"></script>
+<script src="js/Sun.js"></script>
+<script src="js/Pipe.js"></script>
 <script src="js/Bird.js"></script>
 <script src ="js/Environment.js"></script>
 <script src="js/main.js"></script>
